wrote DFM model results

--- a/Rohit_Master_Thesis/2.Theory.tex
+++ b/Rohit_Master_Thesis/2.Theory.tex
@@ -530,3 +530,5 @@ In the feature extraction stage, the features are extracted using \gls{dnn} as t
 In the anomaly detection stage, once the features are extracted, then these features undergoes dimensionality reduction using \gls{pca}\cite{IBM2023} to get the first 16 principal components. \gls{pca} is among the simple and most straightforward ways of doing dimensionality reduction. Its a technique that reduces high-dimensional data into a lower-dimensional representation by using the dependencies between variables, without loosing too much information \cite{Shalizi2012}. After the features are reduced using \gls{pca}, then on these reduced features Gaussian \gls{kde} is applied. The main idea behind \gls{kde} is that the training datasets will follows some random distribution, and this distribution can be modelled by employing \gls{kde} \cite{10208786}.
 
 During inference, if a lower probability density is observed below the threshold determined by the training dataset, this indicates the existence of an anomaly compared the data distribution learned from the training data \cite{10208786}. The \gls{dfkde} gives competitive results on MVTec AD\cite{8954181}, for the metric \gls{auroc} \gls{dfkde} gives highest of 96.5 score \cite{Anomalib2024}.
+
+%see if I want to write about densenet architecture in the theory section.
