--- a/Rohit_Master_Thesis/3.Methodology.tex
+++ b/Rohit_Master_Thesis/3.Methodology.tex
@@ -221,7 +221,7 @@ This metric is very important where the cost of false positives is high, because
 \subsubsection*{F1-Score}
 \label{subsec:F1-Score}
 
-The F1 Score is a metric that achieves a balance between precision and recall. The calculation involves taking the harmonic mean of precision and recall. The F1 Score is a valuable metric for achieving a trade-off between high precision and recall. It effectively penalizes extreme negative values of either component \cite{Walker2024}. It is expressed as:
+The F1-score is a metric that achieves a balance between precision and recall. The calculation involves taking the harmonic mean of precision and recall. The F1-score is a valuable metric for achieving a trade-off between high precision and recall. It effectively penalizes extreme negative values of either component \cite{Walker2024}. It is expressed as:
 
 \begin{equation}
 \text{F1-Score} = 2 \times \frac{\text{Precision} \times \text{Recall}}{\text{Precision} + \text{Recall}} \quad \text{\cite{Walker2024}}
