--- a/Rohit_Master_Thesis/abbreviations.tex
+++ b/Rohit_Master_Thesis/abbreviations.tex
@@ -40,3 +40,4 @@
 \newabbreviation{fpn}{FPN}{Feature Pyramid Network}
 \newabbreviation{pan}{PAN}{Path Aggregation Network}
 \newabbreviation{nll}{NLL}{Negative Log-Likelihood}
+\newabbreviation{fre}{FRE}{Frequentist}
