Started with Fastflow results

--- a/Rohit_Master_Thesis/2.Theory.tex
+++ b/Rohit_Master_Thesis/2.Theory.tex
@@ -531,4 +531,5 @@ In the anomaly detection stage, once the features are extracted, then these feat
 
 During inference, if a lower probability density is observed below the threshold determined by the training dataset, this indicates the existence of an anomaly compared the data distribution learned from the training data \cite{10208786}. The \gls{dfkde} gives competitive results on MVTec AD\cite{8954181}, for the metric \gls{auroc} \gls{dfkde} gives highest of 96.5 score \cite{Anomalib2024}.
 
-%see if I want to write about densenet architecture in the theory section.
+\textbf{see if I want to write about densenet, DeiT, CaiT architectures in the theory section.}
+
