--- a/Rohit_Master_Thesis/abbreviations.tex
+++ b/Rohit_Master_Thesis/abbreviations.tex
@@ -41,3 +41,5 @@
 \newabbreviation{pan}{PAN}{Path Aggregation Network}
 \newabbreviation{nll}{NLL}{Negative Log-Likelihood}
 \newabbreviation{fre}{FRE}{Frequentist}
+\newabbreviation{deit}{DeiT}{Data-Efficient Image transformer}
+\newabbreviation{cait}{CaiT}{Class-Attention in Image Transformer}
